Add different pegin test cases and check for registered utxos. Refactor to reuse utility methods